--- a/Repeat/Views/Error/NotFound.cshtml
+++ b/Repeat/Views/Error/NotFound.cshtml
@@ -3,6 +3,6 @@
     ViewBag.Title = "Page Not Exist";
 }
 
-<h1>@ViewBag.ErrorMessage</h1>
+<h3 class="text-danger mt-3">@ViewBag.ErrorMessage</h3>
 <a asp-controller="Home" asp-action="Index">Back To Home Page</a>
 
