--- a/Repeat/Views/Home/Edit.cshtml
+++ b/Repeat/Views/Home/Edit.cshtml
@@ -9,7 +9,7 @@
             <div class="card">
                 <div class="card-header"><h1>@Model.FirstName</h1></div>
                 <div class="card-body text-center">
-                    <img class="card-img-top imgThumbnail" src="@photoPath" alt="Alternate Text" />
+                    <img class="card-img-top" src="@photoPath" alt="Alternate Text" />
                     <h4>Student Id: @Model.Id</h4>
                     <h4>Name: @Model.FirstName</h4>
                 </div>
