--- a/Repeat/Views/Home/Details.cshtml
+++ b/Repeat/Views/Home/Details.cshtml
@@ -7,9 +7,9 @@
     <div class="row justify-content-center m-3">
         <div class="col-sm-8">
             <div class="card">
-                <div class="card-header"><h1>@Model.Student.FirstName @Model.Student.LastName</h1></div>
+                <div class="card-header"><h3>@Model.Student.FirstName @Model.Student.LastName</h3></div>
                 <div class="card-body text-center">
-                    <img class="card-img-top imgThumbnail" src="@photoPath" alt="Photo" />
+                    <img class="card-img-top" src="@photoPath" alt="Photo" />
                     <h4>Student Id: @Model.Student.Id</h4>
                     <h4>Name: @Model.Student.FirstName @Model.Student.LastName</h4>
                     <h4>Email: @Model.Student.Email</h4>
