--- a/Repeat/Views/Shared/_Layout.cshtml
+++ b/Repeat/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse pt-4" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" asp-controller="home" asp-action="index">Student List</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="home" asp-action="create">Add Student</a></li>
